# tamebi

./: .gitignore  Readme.md  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: __init__.py
backend/api/: index.py
backend/app/: config.py  database.py  main.py  models.py  utils.py
backend/app/routes/: analytics.py  redirect.py  shorten.py
backend/tests/: test_shorten.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
